object.wait/notify.